--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
 
