--- a/24hour.html
+++ b/24hour.html
@@ -37,7 +37,7 @@
 <img id="logo" src="images/lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
-    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="../kitty.jpg"> 24 hour Emergency Call Outs <img id="puppydog" alt="a puppy dog" src="../pupper.jpg"></h1>
+    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="kitty.jpg"> 24 hour Emergency Call Outs <img id="puppydog" alt="a puppy dog" src="pupper.jpg"></h1>
     <br><br><br>
     <p>We've all been there.<br>
    AHHHH!! I have to stay late at work and no one is home to feed Rover!<br>
