--- a/contactus.html
+++ b/contactus.html
@@ -123,11 +123,11 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 
 <div id="content">
-    <h1 style="text-align: center; line-height: 100px;"><img class="icon" id="goat" alt="a goat" src="images/tonguegoat.jfif"> CONTACT US <img class="icon" id="bird" alt="a bird" src="images/scratchbird.jfif"></h1>
+    <h1 style="text-align: center; line-height: 100px;"><img class="icon" id="goat" alt="a goat" src="tonguegoat.jfif"> CONTACT US <img class="icon" id="bird" alt="a bird" src="scratchbird.jfif"></h1>
         <br>
 
         <div id="address"><h4>OUR INFO</h4>
@@ -208,7 +208,7 @@
             </form> 
         </div><!--submit-->
 
-        <div id="spinnerball" > <img src="images/tennisball.jpg" alt="tennisball" id="tennisball"> </div><br><br>
+        <div id="spinnerball" > <img src="tennisball.jpg" alt="tennisball" id="tennisball"> </div><br><br>
 
 
 <div id="footer">Lil Pal Pet Sitting &copy; | All Rights Reserved | Liza Fenton 
