--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 
 <div id="wrapper">
@@ -75,51 +75,51 @@
 
     <!--photo divs-->
     <div class="thumbnail">
-        <img class="thumb" src="images/teethdog.jpg" alt="a dog with a funny ball"><br>
+        <img class="thumb" src="teethdog.jpg" alt="a dog with a funny ball"><br>
         Honey makes us laugh with her new teeth
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/comfycat.jpg" alt="a cat sitting like a people"><br>
+        <img class="thumb" src="comfycat.jpg" alt="a cat sitting like a people"><br>
         Look, Ma! Snickers thinks he's people!
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/scratchbird.jfif" alt="a bird getting scratched"><br>
+        <img class="thumb" src="scratchbird.jfif" alt="a bird getting scratched"><br>
         Benson receives some good scritchin'
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/xmasdog.png" alt="a dog with tinsel"><br>
+        <img class="thumb" src="xmasdog.png" alt="a dog with tinsel"><br>
         Lucy gets us all into the Christmas spirit!
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/tonguegoat.jfif" alt="a goat poking her tongue out"><br>
+        <img class="thumb" src="tonguegoat.jfif" alt="a goat poking her tongue out"><br>
         Lady gives us a cheeky :P
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/dogsfrisbee.jpg" alt="dogs with a frisbee"><br>
+        <img class="thumb" src="dogsfrisbee.jpg" alt="dogs with a frisbee"><br>
         Jake &amp; Snowy disagree on who gets a frisbee
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/snake.jpg" alt="a snake"><br>
+        <img class="thumb" src="snake.jpg" alt="a snake"><br>
         Smithers right after a shed, isnt he beautiful?
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/kittyplay.jfif" alt="a kitten plays with a toy"><br>
+        <img class="thumb" src="kittyplay.jfif" alt="a kitten plays with a toy"><br>
         Piglet loves her new toy!
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/chickens.jpg" alt="some chickens"><br>
+        <img class="thumb" src="chickens.jpg" alt="some chickens"><br>
         The ladies enjoying yard time
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/axolotl.jpg" alt="an axolotl"><br>
+        <img class="thumb" src="axolotl.jpg" alt="an axolotl"><br>
         Bob the Axolotl comes in for a closer look
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/dogeating.jfif" alt="a dog eating"><br>
+        <img class="thumb" src="dogeating.jfif" alt="a dog eating"><br>
         Squish is a guts at dinner time
     </div>
     <div class="thumbnail">
-        <img class="thumb" src="images/cockatoo.jpg" alt="a cockatoo"><br>
+        <img class="thumb" src="cockatoo.jpg" alt="a cockatoo"><br>
         Tookie shows us his beautiful crest 
     </div>
     <!--photo divs--> 
