--- a/location.html
+++ b/location.html
@@ -34,7 +34,7 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
    <h1>Our Locations:</h1>
