--- a/newfriend.html
+++ b/newfriend.html
@@ -50,10 +50,10 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
-    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="../kitty.jpg"> New Friend Visit<img id="puppydog" alt="a puppy dog" src="../pupper.jpg"></h1>
+    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="kitty.jpg"> New Friend Visit<img id="puppydog" alt="a puppy dog" src="pupper.jpg"></h1>
     <br><br><br>
     <p>We require a New Friend Visit to take place for all potential customers.<br>
     These visits are to assess your pet's temperment and behaviour.<br>
