--- a/pricing.html
+++ b/pricing.html
@@ -34,16 +34,16 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
    <br><br><div id="imgs">
-        <img src="../kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
-        <img src="../pupper.jpg" alt="a pup" width="130px" height="100px"><br>
-        <img src="../kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
-        <img src="../pupper.jpg" alt="a pup" width="130px" height="100px"><br>
-        <img src="../kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
-        <img src="../pupper.jpg" alt="a pup" width="130px" height="100px"><br>
+        <img src="kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
+        <img src="pupper.jpg" alt="a pup" width="130px" height="100px"><br>
+        <img src="kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
+        <img src="pupper.jpg" alt="a pup" width="130px" height="100px"><br>
+        <img src="kitty.jpg" alt="a kitty cat" width="130px" height="100px"><br>
+        <img src="pupper.jpg" alt="a pup" width="130px" height="100px"><br>
     </div> 
     
     <h1 style="text-align: center;"> PRICING </h1> 
