--- a/reviews.html
+++ b/reviews.html
@@ -92,11 +92,11 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 
 <div id="content">
-    <h1 style="text-align: center; line-height: 100px;"><img class="icon" id="frog" alt="a froggie" src="images/frog.jpg" style="float: left;"> Reviews <img class="icon" id="rat" alt="a rat" src="images/rat.jpg" style="float: right;"></h1>
+    <h1 style="text-align: center; line-height: 100px;"><img class="icon" id="frog" alt="a froggie" src="frog.jpg" style="float: left;"> Reviews <img class="icon" id="rat" alt="a rat" src="rat.jpg" style="float: right;"></h1>
         <br>
 
         <div id="submit" class="form1" style="border:10px;">
@@ -150,7 +150,7 @@
             </form> 
         </div><!--submit--><br>
 
-        <div id="spinnerball" > <img src="images/tennisball.jpg" alt="tennisball" id="tennisball"> </div>
+        <div id="spinnerball" > <img src="tennisball.jpg" alt="tennisball" id="tennisball"> </div>
 
         <h4>RECENT REVIEWS</h4>
 
