--- a/walkiesfeeds.html
+++ b/walkiesfeeds.html
@@ -34,10 +34,10 @@
         </ul><!--navigation-->
         </nav>
 <div id="logodiv">        
-<img id="logo" src="images/lilpal.png" alt="lil pal logo">
+<img id="logo" src="lilpal.png" alt="lil pal logo">
 </div><!--logodiv-->
 <div id="content">
-    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="../kitty.jpg"> Walkies &amp; Feeds<img id="puppydog" alt="a puppy dog" src="../pupper.jpg"></h1>
+    <h1 style="text-align: center;"><img id="kittycat" alt="a kitty cat" src="kitty.jpg"> Walkies &amp; Feeds<img id="puppydog" alt="a puppy dog" src="pupper.jpg"></h1>
     <br><br><br>
     <p>aaaaaaaaaaaaaaaaaaaaa.<br>
    aaaaaaaaaaaaaaaaaaaaaaaa.<br>
